cmake_minimum_required(VERSION 3.16)
project(savedata)

set(CMAKE_CXX_STANDARD 20)
include_directories(include)
include_directories(pq pq_include)
add_executable(savedata main.cpp savedata.h savedata.cpp)
target_link_libraries(savedata kwdbts_client_lib)
target_link_libraries(savedata pq)
target_link_libraries(savedata opentelemetry)
add_library(savedata1 SHARED main.cpp savedata.h savedata.cpp)